--- a/abt.htm
+++ b/abt.htm
@@ -97,17 +97,17 @@
         <h3 class="text-center">Meet Our Creative Team</h3>
         <div class="row g-4 justify-content-center">
           <div class="col-md-3 team-member">
-            <a href="https://www.instagram.com/_.devansh.05?igsh=MXRwMDZqNHA4ODRxbA=="><img src="/devansh.jpg" alt="founder"></a>
+            <a href="https://www.instagram.com/_.devansh.05?igsh=MXRwMDZqNHA4ODRxbA=="><img src="https://inkvercloths.github.io/web/main.htm/devansh.jpg" alt="founder"></a>
             <h5 class="text-white">𝔻𝔼𝕍𝔸ℕ𝕊ℍ</h5>
             <p class="text-secondary">Fₒᵤₙdₑᵣ & Cᵣₑₐₜᵢᵥₑ Dᵢᵣₑcₜₒᵣ</p>
           </div>
           <div class="col-md-3 team-member">
-            <a href="https://www.instagram.com/flex.kunal0u?igsh=d3JsbnFyeXplc3ow"><img src="/KUNAL.jpg" alt="Designer"></a>
+            <a href="https://www.instagram.com/flex.kunal0u?igsh=d3JsbnFyeXplc3ow"><img src="https://inkvercloths.github.io/web/main.htm/KUNAL.jpg" alt="Designer"></a>
             <h5 class="text-white">𝕂𝕌ℕ𝔸𝕃</h5>
             <p class="text-secondary">Fₒᵤₙdₑᵣ & Dᵢgᵢₜₐₗ ₕₑₐd</p>
           </div>
           <div class="col-md-3 team-member">
-            <img src="/karan.jpg" alt="Marketing Head">
+            <img src="https://inkvercloths.github.io/web/main.htm/karan.jpg" alt="Marketing Head">
             <h5 class="text-white">𝕂𝔸ℝ𝔸ℕ</h5>
             <p class="text-secondary">ₘₐᵣₖₑₜᵢₙg ₕₑₐd</p>
           </div>
@@ -129,3 +129,4 @@
   </script>
 </body>
 </html>
+
