--- a/main.htm
+++ b/main.htm
@@ -84,8 +84,8 @@
       </button>
       <div class="collapse navbar-collapse" id="mainNav">
         <ul class="navbar-nav ms-auto align-items-lg-center">
-          <li class="nav-item"><a class="nav-link px-3" href="https://inkvercloths.github.io/web/main.htm/abt.htm">About</a></li>
-          <li class="nav-item"><a class="nav-link px-3" href="https://inkvercloths.github.io/web/main.htm/cont.htm">Contact</a></li>
+          <li class="nav-item"><a class="nav-link px-3" href="https://inkvercloths.github.io/web/abt.htm">About</a></li>
+          <li class="nav-item"><a class="nav-link px-3" href="https://inkvercloths.github.io/web/cont.htm">Contact</a></li>
           <li class="nav-item ms-2">
             <button class="btn btn-outline-light btn-sm" id="cartToggle" aria-controls="cartOverlay"><i class="bi bi-bag"></i> Cart <span id="cartCount" class="ms-1 badge bg-light text-dark">0</span></button>
           </li>
@@ -104,7 +104,7 @@
           <p class="lead muted-small">Discover our curated edit of elevated basics — crafted to last and designed in monochrome.</p>
           <div class="mt-4">
             <a class="btn btn-light btn-lg me-3" href="#collections">How to BUY</a>
-            <a class="btn btn-outline-secondary btn-lg" href="#footer">Our Story</a>
+            <a class="btn btn-outline-secondary btn-lg" href="https://inkvercloths.github.io/web/abt.htm">Our Story</a>
           </div>
         </div>
         <div class="col-lg-5 d-none d-lg-block text-end">
@@ -130,7 +130,7 @@
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card card-product h-100 p-3">
             <div class="ratio ratio-4x3 mb-3 overflow-hidden rounded-3">
-              <img src="https://inkvercloths.github.io/web/main.htm/prod_hoddie/i_am_ur_villan.jpg" class="card-img-top" alt="Villain Hoodie" style="object-fit:cover;">
+              <img src="https://inkvercloths.github.io/web/prod_hoddie/i_am_ur_villan.jpg" class="card-img-top" alt="Villain Hoodie" style="object-fit:cover;">
             </div>
             <div class="card-body px-0 pt-0">
               <h5 class="mb-1">Villain Hoodie</h5>
@@ -150,7 +150,7 @@
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card card-product h-100 p-3">
             <div class="ratio ratio-4x3 mb-3 overflow-hidden rounded-3">
-              <img src="https://inkvercloths.github.io/web/main.htm/prod_hoddie/saint1.jpg" class="card-img-top" alt="Saint Hoodie" style="object-fit:cover;">
+              <img src="https://inkvercloths.github.io/web/prod_hoddie/saint1.jpg" class="card-img-top" alt="Saint Hoodie" style="object-fit:cover;">
             </div>
             <div class="card-body px-0 pt-0">
               <h5 class="mb-1">Saint Hoodie</h5>
@@ -170,7 +170,7 @@
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card card-product h-100 p-3">
             <div class="ratio ratio-4x3 mb-3 overflow-hidden rounded-3">
-              <img src="https://inkvercloths.github.io/web/main.htm/prod_hoddie/spider.jpg" class="card-img-top" alt="Classic Shirt" style="object-fit:cover;">
+              <img src="https://inkvercloths.github.io/web/prod_hoddie/spider.jpg" class="card-img-top" alt="Classic Shirt" style="object-fit:cover;">
             </div>
             <div class="card-body px-0 pt-0">
               <h5 class="mb-1">Spider Hoodie</h5>
@@ -190,7 +190,7 @@
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card card-product h-100 p-3">
             <div class="ratio ratio-4x3 mb-3 overflow-hidden rounded-3">
-              <img src="https://inkvercloths.github.io/web/main.htm/prod_hoddie/focus.jpg" class="card-img-top" alt="Relaxed Sweatpants" style="object-fit:cover;">
+              <img src="https://inkvercloths.github.io/web/prod_hoddie/focus.jpg" class="card-img-top" alt="Relaxed Sweatpants" style="object-fit:cover;">
             </div>
             <div class="card-body px-0 pt-0">
               <h5 class="mb-1">Focus Hoodie</h5>
@@ -223,7 +223,7 @@
           <div class="row g-3">
             <div class="col-md-6">
               <div class="ratio ratio-4x3 mb-3 rounded-3 overflow-hidden">
-                <img class="modal-product-image" src="https://inkvercloths.github.io/web/main.htm/prod_hoddie/villan1.jpg" alt="product" style="object-fit:cover;width:100%;height:100%;">
+                <img class="modal-product-image" src="https://inkvercloths.github.io/web/prod_hoddie/villan1.jpg" alt="product" style="object-fit:cover;width:100%;height:100%;">
               </div>
             </div>
             <div class="col-md-6">
@@ -261,7 +261,7 @@
           <div class="row g-3">
             <div class="col-md-6">
               <div class="ratio ratio-4x3 mb-3 rounded-3 overflow-hidden">
-                <img class="modal-product-image" src="https://inkvercloths.github.io/web/main.htm/prod_hoddie/saint2.jpg" alt="product" style="object-fit:cover;width:100%;height:100%;">
+                <img class="modal-product-image" src="https://inkvercloths.github.io/web/prod_hoddie/saint2.jpg" alt="product" style="object-fit:cover;width:100%;height:100%;">
               </div>
             </div>
             <div class="col-md-6">
@@ -297,7 +297,7 @@
           <div class="row g-3">
             <div class="col-md-6">
               <div class="ratio ratio-4x3 mb-3 rounded-3 overflow-hidden">
-                <img class="modal-product-image" src="https://inkvercloths.github.io/web/main.htm/prod_hoddie/spider1.jpg" alt="product" style="object-fit:cover;width:100%;height:100%;">
+                <img class="modal-product-image" src="https://inkvercloths.github.io/web/prod_hoddie/spider1.jpg" alt="product" style="object-fit:cover;width:100%;height:100%;">
               </div>
             </div>
             <div class="col-md-6">
@@ -336,7 +336,7 @@
           <div class="row g-3">
             <div class="col-md-6">
               <div class="ratio ratio-4x3 mb-3 rounded-3 overflow-hidden">
-                <img class="modal-product-image" src="https://inkvercloths.github.io/web/main.htm/prod_hoddie/focus1.jpg" alt="product" style="object-fit:cover;width:100%;height:100%;">
+                <img class="modal-product-image" src="https://inkvercloths.github.io/web/prod_hoddie/focus1.jpg" alt="product" style="object-fit:cover;width:100%;height:100%;">
               </div>
             </div>
             <div class="col-md-6">
@@ -745,4 +745,5 @@
   </script>
 </body>
 </html>
+
 
