--- a/main.htm
+++ b/main.htm
@@ -423,7 +423,7 @@
         </div>
         <div class="col-md-4 mb-3">
           <h6>Contact</h6>
-          <p class="muted-small">Email: <a class="muted-small" href="mailto:inkverstore@example.com">inkverstore@example.com</a></p>
+          <p class="muted-small">Email: <a class="muted-small" href="mailto:inkverstore@example.com">inkverclothing@gmail.com</a></p>
         </div>
       </div>
       <div class="text-center muted-small mt-3">&copy; <span id="year"></span> 𝕀ℕ𝕂𝕍𝔼ℝ — All rights reserved</div>
@@ -745,5 +745,6 @@
   </script>
 </body>
 </html>
+
 
 
