--- a/main.htm
+++ b/main.htm
@@ -84,8 +84,8 @@
       </button>
       <div class="collapse navbar-collapse" id="mainNav">
         <ul class="navbar-nav ms-auto align-items-lg-center">
-          <li class="nav-item"><a class="nav-link px-3" href="https://inkvercloths.github.io/web/abt.htm">About</a></li>
-          <li class="nav-item"><a class="nav-link px-3" href="https://inkvercloths.github.io/web/cont.htm">Contact</a></li>
+          <li class="nav-item"><a class="nav-link px-3" href="/abt.htm">About</a></li>
+          <li class="nav-item"><a class="nav-link px-3" href="/cont.htm">Contact</a></li>
           <li class="nav-item ms-2">
             <button class="btn btn-outline-light btn-sm" id="cartToggle" aria-controls="cartOverlay"><i class="bi bi-bag"></i> Cart <span id="cartCount" class="ms-1 badge bg-light text-dark">0</span></button>
           </li>
@@ -104,7 +104,7 @@
           <p class="lead muted-small">Discover our curated edit of elevated basics — crafted to last and designed in monochrome.</p>
           <div class="mt-4">
             <a class="btn btn-light btn-lg me-3" href="#collections">How to BUY</a>
-            <a class="btn btn-outline-secondary btn-lg" href="https://inkvercloths.github.io/web/abt.htm">Our Story</a>
+            <a class="btn btn-outline-secondary btn-lg" href="#footer">Our Story</a>
           </div>
         </div>
         <div class="col-lg-5 d-none d-lg-block text-end">
@@ -130,7 +130,7 @@
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card card-product h-100 p-3">
             <div class="ratio ratio-4x3 mb-3 overflow-hidden rounded-3">
-              <img src="https://inkvercloths.github.io/web/prod_hoddie/i_am_ur_villan.jpg" class="card-img-top" alt="Villain Hoodie" style="object-fit:cover;">
+              <img src="/prod_hoddie/i_am_ur_villan.jpg" class="card-img-top" alt="Villain Hoodie" style="object-fit:cover;">
             </div>
             <div class="card-body px-0 pt-0">
               <h5 class="mb-1">Villain Hoodie</h5>
@@ -150,7 +150,7 @@
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card card-product h-100 p-3">
             <div class="ratio ratio-4x3 mb-3 overflow-hidden rounded-3">
-              <img src="https://inkvercloths.github.io/web/prod_hoddie/saint1.jpg" class="card-img-top" alt="Saint Hoodie" style="object-fit:cover;">
+              <img src="/prod_hoddie/saint1.jpg" class="card-img-top" alt="Saint Hoodie" style="object-fit:cover;">
             </div>
             <div class="card-body px-0 pt-0">
               <h5 class="mb-1">Saint Hoodie</h5>
@@ -170,7 +170,7 @@
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card card-product h-100 p-3">
             <div class="ratio ratio-4x3 mb-3 overflow-hidden rounded-3">
-              <img src="https://inkvercloths.github.io/web/prod_hoddie/spider.jpg" class="card-img-top" alt="Classic Shirt" style="object-fit:cover;">
+              <img src="/prod_hoddie/spider.jpg" class="card-img-top" alt="Classic Shirt" style="object-fit:cover;">
             </div>
             <div class="card-body px-0 pt-0">
               <h5 class="mb-1">Spider Hoodie</h5>
@@ -190,7 +190,7 @@
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card card-product h-100 p-3">
             <div class="ratio ratio-4x3 mb-3 overflow-hidden rounded-3">
-              <img src="https://inkvercloths.github.io/web/prod_hoddie/focus.jpg" class="card-img-top" alt="Relaxed Sweatpants" style="object-fit:cover;">
+              <img src="/prod_hoddie/focus.jpg" class="card-img-top" alt="Relaxed Sweatpants" style="object-fit:cover;">
             </div>
             <div class="card-body px-0 pt-0">
               <h5 class="mb-1">Focus Hoodie</h5>
@@ -207,6 +207,26 @@
           </div>
         </div>
       </div> <!-- .row -->
+      <!--product5-->
+       <div class="col-12 col-md-6 col-lg-4">
+          <div class="card card-product h-100 p-3">
+            <div class="ratio ratio-4x3 mb-3 overflow-hidden rounded-3">
+              <img src="https://inkvercloths.github.io/web/prod_hoddie/limit.jpg" class="card-img-top" alt="Villain Hoodie" style="object-fit:cover;">
+            </div>
+            <div class="card-body px-0 pt-0">
+              <h5 class="mb-1">Distressed Limited Edition Hoodie</h5>
+              <p class="muted-small mb-2">Distressed Limited Edition Hoodie</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <p class="mb-0"><span style="text-decoration: line-through; color: gray;">₹980</span> <span style="color: red; font-weight: 700;">₹499</span></p>
+                <div>
+                  <button class="btn btn-sm btn-outline-light me-2" data-bs-toggle="modal" data-bs-target="#productModal5" data-name="Villain Hoodie" data-price="499" data-desc="Distressed villain graphic hoodie.">View</button>
+                  <button class="btn btn-sm btn-light add-to-cart" data-name="Villain Hoodie" data-price="499">Add</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
     </div> <!-- .container -->
   </section>
 
@@ -223,7 +243,7 @@
           <div class="row g-3">
             <div class="col-md-6">
               <div class="ratio ratio-4x3 mb-3 rounded-3 overflow-hidden">
-                <img class="modal-product-image" src="https://inkvercloths.github.io/web/prod_hoddie/villan1.jpg" alt="product" style="object-fit:cover;width:100%;height:100%;">
+                <img class="modal-product-image" src="/prod_hoddie/villan1.jpg" alt="product" style="object-fit:cover;width:100%;height:100%;">
               </div>
             </div>
             <div class="col-md-6">
@@ -261,7 +281,7 @@
           <div class="row g-3">
             <div class="col-md-6">
               <div class="ratio ratio-4x3 mb-3 rounded-3 overflow-hidden">
-                <img class="modal-product-image" src="https://inkvercloths.github.io/web/prod_hoddie/saint2.jpg" alt="product" style="object-fit:cover;width:100%;height:100%;">
+                <img class="modal-product-image" src="/prod_hoddie/saint2.jpg" alt="product" style="object-fit:cover;width:100%;height:100%;">
               </div>
             </div>
             <div class="col-md-6">
@@ -297,7 +317,7 @@
           <div class="row g-3">
             <div class="col-md-6">
               <div class="ratio ratio-4x3 mb-3 rounded-3 overflow-hidden">
-                <img class="modal-product-image" src="https://inkvercloths.github.io/web/prod_hoddie/spider1.jpg" alt="product" style="object-fit:cover;width:100%;height:100%;">
+                <img class="modal-product-image" src="/prod_hoddie/spider1.jpg" alt="product" style="object-fit:cover;width:100%;height:100%;">
               </div>
             </div>
             <div class="col-md-6">
@@ -336,7 +356,7 @@
           <div class="row g-3">
             <div class="col-md-6">
               <div class="ratio ratio-4x3 mb-3 rounded-3 overflow-hidden">
-                <img class="modal-product-image" src="https://inkvercloths.github.io/web/prod_hoddie/focus1.jpg" alt="product" style="object-fit:cover;width:100%;height:100%;">
+                <img class="modal-product-image" src="/prod_hoddie/focus1.jpg" alt="product" style="object-fit:cover;width:100%;height:100%;">
               </div>
             </div>
             <div class="col-md-6">
@@ -363,7 +383,43 @@
       </div>
     </div>
   </div>
-  
+  <!--product5-->
+  <div class="modal fade product-modal" id="productModal5" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+      <div class="modal-content bg-dark text-white">
+        <div class="modal-header border-0">
+          <h5 class="modal-title modal-product-title">Distressed Limited Edition Hoodie</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="row g-3">
+            <div class="col-md-6">
+              <div class="ratio ratio-4x3 mb-3 rounded-3 overflow-hidden">
+                <img class="modal-product-image" src="https://inkvercloths.github.io/web/prod_hoddie/limit1.jpg" alt="product" style="object-fit:cover;width:100%;height:100%;">
+              </div>
+            </div>
+            <div class="col-md-6">
+              <h5 class="modal-product-name">Distressed Limited Edition Hoodie</h5>
+              <p class="muted-small modal-product-desc">Distressed Limited Edition Hoodie.</p>
+              <div class="mb-2"><span class="price modal-product-price">₹499</span></div>
+
+              <div class="mb-3">
+                <label class="form-label muted-small">Size</label>
+               *size*
+              </div>
+
+              <div class="d-flex gap-2">
+                <button class="btn btn-light btn-lg modal-buy-now">Buy now</button>
+                <button class="btn btn-outline-light btn-lg modal-quick-add" data-name="Quick Add" data-price="0">Add to cart</button>
+              </div>
+
+              <p class="buy-note modal-buy-note">We will contact you soon for payment — <strong>NO PAYMENT, NO ORDER</strong>. <button class="btn btn-sm btn-outline-light ms-2 modal-open-order">Order</button></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Order Modal (Web3Forms) -->
   <div class="modal fade" id="orderModal" tabindex="-1">
@@ -423,7 +479,7 @@
         </div>
         <div class="col-md-4 mb-3">
           <h6>Contact</h6>
-          <p class="muted-small">Email: <a class="muted-small" href="mailto:inkverstore@example.com">inkverclothing@gmail.com</a></p>
+          <p class="muted-small">Email: <a class="muted-small" href="mailto:inkverstore@example.com">inkverstore@example.com</a></p>
         </div>
       </div>
       <div class="text-center muted-small mt-3">&copy; <span id="year"></span> 𝕀ℕ𝕂𝕍𝔼ℝ — All rights reserved</div>
@@ -745,6 +801,3 @@
   </script>
 </body>
 </html>
-
-
-
