--- a/main.htm
+++ b/main.htm
@@ -130,7 +130,7 @@
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card card-product h-100 p-3">
             <div class="ratio ratio-4x3 mb-3 overflow-hidden rounded-3">
-              <img src="/prod_hoddie/i_am_ur_villan.jpg" class="card-img-top" alt="Villain Hoodie" style="object-fit:cover;">
+              <img src="https://inkvercloths.github.io/web/prod_hoddie/i_am_ur_villan.jpg" class="card-img-top" alt="Villain Hoodie" style="object-fit:cover;">
             </div>
             <div class="card-body px-0 pt-0">
               <h5 class="mb-1">Villain Hoodie</h5>
@@ -150,7 +150,7 @@
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card card-product h-100 p-3">
             <div class="ratio ratio-4x3 mb-3 overflow-hidden rounded-3">
-              <img src="/prod_hoddie/saint1.jpg" class="card-img-top" alt="Saint Hoodie" style="object-fit:cover;">
+              <img src="https://inkvercloths.github.io/web/prod_hoddie/saint1.jpg" class="card-img-top" alt="Saint Hoodie" style="object-fit:cover;">
             </div>
             <div class="card-body px-0 pt-0">
               <h5 class="mb-1">Saint Hoodie</h5>
@@ -170,7 +170,7 @@
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card card-product h-100 p-3">
             <div class="ratio ratio-4x3 mb-3 overflow-hidden rounded-3">
-              <img src="/prod_hoddie/spider.jpg" class="card-img-top" alt="Classic Shirt" style="object-fit:cover;">
+              <img src="https://inkvercloths.github.io/web/prod_hoddie/spider.jpg" class="card-img-top" alt="Classic Shirt" style="object-fit:cover;">
             </div>
             <div class="card-body px-0 pt-0">
               <h5 class="mb-1">Spider Hoodie</h5>
@@ -190,7 +190,7 @@
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card card-product h-100 p-3">
             <div class="ratio ratio-4x3 mb-3 overflow-hidden rounded-3">
-              <img src="/prod_hoddie/focus.jpg" class="card-img-top" alt="Relaxed Sweatpants" style="object-fit:cover;">
+              <img src="https://inkvercloths.github.io/web/prod_hoddie/focus.jpg" class="card-img-top" alt="Relaxed Sweatpants" style="object-fit:cover;">
             </div>
             <div class="card-body px-0 pt-0">
               <h5 class="mb-1">Focus Hoodie</h5>
@@ -243,7 +243,7 @@
           <div class="row g-3">
             <div class="col-md-6">
               <div class="ratio ratio-4x3 mb-3 rounded-3 overflow-hidden">
-                <img class="modal-product-image" src="/prod_hoddie/villan1.jpg" alt="product" style="object-fit:cover;width:100%;height:100%;">
+                <img class="modal-product-image" src="https://inkvercloths.github.io/web/prod_hoddie/villan1.jpg" alt="product" style="object-fit:cover;width:100%;height:100%;">
               </div>
             </div>
             <div class="col-md-6">
@@ -281,7 +281,7 @@
           <div class="row g-3">
             <div class="col-md-6">
               <div class="ratio ratio-4x3 mb-3 rounded-3 overflow-hidden">
-                <img class="modal-product-image" src="/prod_hoddie/saint2.jpg" alt="product" style="object-fit:cover;width:100%;height:100%;">
+                <img class="modal-product-image" src="https://inkvercloths.github.io/web/prod_hoddie/saint2.jpg" alt="product" style="object-fit:cover;width:100%;height:100%;">
               </div>
             </div>
             <div class="col-md-6">
@@ -317,7 +317,7 @@
           <div class="row g-3">
             <div class="col-md-6">
               <div class="ratio ratio-4x3 mb-3 rounded-3 overflow-hidden">
-                <img class="modal-product-image" src="/prod_hoddie/spider1.jpg" alt="product" style="object-fit:cover;width:100%;height:100%;">
+                <img class="modal-product-image" src="https://inkvercloths.github.io/web/prod_hoddie/spider1.jpg" alt="product" style="object-fit:cover;width:100%;height:100%;">
               </div>
             </div>
             <div class="col-md-6">
@@ -356,7 +356,7 @@
           <div class="row g-3">
             <div class="col-md-6">
               <div class="ratio ratio-4x3 mb-3 rounded-3 overflow-hidden">
-                <img class="modal-product-image" src="/prod_hoddie/focus1.jpg" alt="product" style="object-fit:cover;width:100%;height:100%;">
+                <img class="modal-product-image" src="https://inkvercloths.github.io/web/prod_hoddie/focus1.jpg" alt="product" style="object-fit:cover;width:100%;height:100%;">
               </div>
             </div>
             <div class="col-md-6">
@@ -801,3 +801,4 @@
   </script>
 </body>
 </html>
+
